Enable schema.org data crawl in extension

--- a/ts/packages/agents/browser/src/extension/manifest.json
+++ b/ts/packages/agents/browser/src/extension/manifest.json
@@ -65,6 +65,7 @@
     "webNavigation",
     "debugger",
     "contextMenus",
+    "downloads",
     "sidePanel"
   ],
   "host_permissions": ["<all_urls>"],
