--- a/ts/packages/agents/montage/package.json
+++ b/ts/packages/agents/montage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "montage",
+  "name": "montage-agent",
   "version": "0.0.1",
   "description": "Montage agent for creating montages.",
   "homepage": "https://github.com/microsoft/TypeAgent#readme",
