--- a/ts/packages/agents/montage/src/site/tsconfig.json
+++ b/ts/packages/agents/montage/src/site/tsconfig.json
@@ -12,6 +12,7 @@
       "exactOptionalPropertyTypes": false,
       "noImplicitAny": false,
       "strictNullChecks": false,
+      "sourceMap": true
     },
     "include": ["./*"],
     "ts-node": {
