--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -45,7 +45,7 @@
       "name": "markdown-agent"
     },
     "montage": {
-      "name": "montage"
+      "name": "montage-agent"
     },
     "oracle": {
       "name": "oracle-agent"
