--- a/ts/packages/knowPro/package.json
+++ b/ts/packages/knowPro/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "aiclient": "workspace:*",
+    "async": "^3.2.5",
     "debug": "^4.4.0",
     "fast-levenshtein": "^3.0.0",
     "knowledge-processor": "workspace:*",
@@ -35,6 +36,7 @@
     "typechat": "^0.1.1"
   },
   "devDependencies": {
+    "@types/async": "^3.2.24",
     "@types/debug": "^4.1.12",
     "@types/fast-levenshtein": "0.0.4",
     "@types/jest": "^29.5.7",
