--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -321,9 +321,9 @@
         "--runTestsByPath",
         "${jest.testFile}"
       ],
-      "cwd": "${workspaceFolder}/packages/knowpro",
+      //"cwd": "${workspaceFolder}/packages/knowpro",
       //"cwd": "${workspaceFolder}/packages/memory/storage",
-      //"cwd": "${workspaceFolder}/packages/memory/conversation",
+      "cwd": "${workspaceFolder}/packages/memory/conversation",
       //"cwd": "${workspaceFolder}/packages/knowledgeProcessor",
       //"cwd": "${workspaceFolder}/packages/aiclient",
       "console": "integratedTerminal",
