--- a/ts/packages/knowPro/package.json
+++ b/ts/packages/knowPro/package.json
@@ -45,6 +45,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
+    "test-lib": "workspace:*",
     "typescript": "^5.4.2"
   }
 }
