--- a/ts/packages/testLib/package.json
+++ b/ts/packages/testLib/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "knowpro",
+  "name": "test-lib",
   "version": "0.0.1",
-  "description": "Basic structured RAG implementation",
+  "description": "Shared testing library",
   "homepage": "https://github.com/microsoft/TypeAgent#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/TypeAgent.git",
-    "directory": "ts/packages/knowPro"
+    "directory": "ts/packages/testLib"
   },
   "license": "MIT",
   "author": "Microsoft",
@@ -17,35 +17,22 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npm run tsc",
-    "postbuild": "copyfiles -u 1 \"src/**/*Schema*.ts\" dist",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
-    "test": "npm run test:local",
-    "test:local": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=\".*\\.spec\\.js\"",
-    "test:local:debug": "node --inspect-brk --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=\".*\\.spec\\.js\"",
     "tsc": "tsc -b"
   },
   "dependencies": {
     "aiclient": "workspace:*",
-    "async": "^3.2.5",
-    "debug": "^4.4.0",
-    "fast-levenshtein": "^3.0.0",
-    "knowledge-processor": "workspace:*",
-    "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
   "devDependencies": {
-    "@types/async": "^3.2.24",
     "@types/debug": "^4.1.12",
-    "@types/fast-levenshtein": "0.0.4",
     "@types/jest": "^29.5.7",
-    "copyfiles": "^2.4.1",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "test-lib": "workspace:*",
     "typescript": "^5.4.2"
   }
 }
