--- a/ts/packages/agents/montage/package.json
+++ b/ts/packages/agents/montage/package.json
@@ -20,8 +20,8 @@
   "scripts": {
     "build": "npm run tsc && npm run webpack",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
-    "prettier": "prettier --check . --ignore-path ../../.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
+    "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
+    "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "start": "webpack serve --open",
     "tsc": "tsc -b tsconfig.json",
     "webpack": "webpack"
