--- a/ts/packages/defaultAgentProvider/package.json
+++ b/ts/packages/defaultAgentProvider/package.json
@@ -54,6 +54,7 @@
     "knowledge-processor": "workspace:*",
     "list-agent": "workspace:*",
     "markdown-agent": "workspace:*",
+    "montage-agent": "workspace:*",
     "music": "workspace:*",
     "oracle-agent": "workspace:*",
     "photo-agent": "workspace:*",
