--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Exif",
         "exifreader",
         "Knowpro",
+        "ktype",
         "lightgray",
         "NOCASE",
         "oclif",
