--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -19,6 +19,7 @@
     "./rpc/dispatcher/server": "./dist/rpc/dispatcherServer.js",
     "./helpers/console": "./dist/helpers/console.js",
     "./helpers/data": "./dist/helpers/userData.js",
+    "./helpers/config": "./dist/helpers/config.js",
     "./helpers/npmAgentProvider": "./dist/npmAgentProvider.js",
     "./internal": "./dist/internal.js",
     "./explorer": "./dist/explorer.js"
