--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -66,6 +66,7 @@
     "electron-vite": "^3.1.0",
     "less": "^4.2.0",
     "rimraf": "^6.0.1",
+    "type-fest": "^4.39.1",
     "typescript": "^5.4.2",
     "vite": "^6.2.4"
   }
