--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
-  pull_request_target:
+  pull_request:
     branches: ["main"]
   merge_group:
     branches: ["main"]
