--- a/ts/packages/agents/greeting/package.json
+++ b/ts/packages/agents/greeting/package.json
@@ -29,12 +29,14 @@
     "aiclient": "workspace:*",
     "chat-agent": "workspace:*",
     "common-utils": "workspace:*",
+    "debug": "^4.4.0",
     "knowledge-processor": "workspace:*",
     "telemetry": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "copyfiles": "^2.4.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
