--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -47,7 +47,9 @@
     "exifreader": "4.23.5",
     "file-size": "^1.0.0",
     "glob": "^10.3.12",
+    "image-memory": "workspace:*",
     "knowledge-processor": "workspace:*",
+    "knowpro": "workspace:*",
     "open": "^10.1.0",
     "proper-lockfile": "^4.1.2",
     "string-width": "^7.2.0",
