--- a/ts/examples/microdataExtract/package.json
+++ b/ts/examples/microdataExtract/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "microdata-extract",
+  "name": "restaurant-data-cli",
   "version": "0.0.1",
-  "private": true,
-  "description": "Get schema.org microdata from website",
+  "description": "CLI for schema.org restaurant data processing",
   "homepage": "https://github.com/microsoft/TypeAgent#readme",
   "repository": {
     "type": "git",
@@ -12,25 +11,46 @@
   "license": "MIT",
   "author": "Microsoft",
   "type": "module",
+  "main": "",
+  "bin": {
+    "restaurant-data-cli": "./bin/run.js"
+  },
   "scripts": {
     "build": "npm run tsc",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
-    "tsc": "tsc -p src"
+    "start": "node ./bin/run.js",
+    "start:dev": "node --loader ts-node/esm --no-warnings=ExperimentalWarning ./bin/dev.js",
+     "tsc": "tsc -b"
+  },
+  "oclif": {
+    "bin": "restaurant-data-cli",
+    "commands": "./dist/commands",
+    "dirname": "restaurant-data-cli",
+    "plugins": [
+      "@oclif/plugin-help"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+      "restaurant": {
+        "description": "Commands for restaurant data processing"
+      }
+    }
   },
   "dependencies": {
+    "@oclif/core": "^4.2.10",
+    "@oclif/plugin-help": "^5",
     "fs-extra": "^11.3.0",
     "puppeteer": "^23.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.4.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.4.2"
-  },
+  },  
   "engines": {
     "node": ">=18",
     "pnpm": ">=8"
