--- a/ts/examples/microdataExtract/src/tsconfig.json
+++ b/ts/examples/microdataExtract/src/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
+    "composite": true,
+    "rootDir": ".",
     "outDir": "../dist",
-    "lib": ["ESNext", "DOM"],
-  }
+    "lib": ["es2021", "DOM"],
+  },
+  "include": ["./**/*"],
+    "ts-node": {
+      "esm": true
+    }
 }
