more work in the indexing engine

--- a/ts/packages/memory/image/package.json
+++ b/ts/packages/memory/image/package.json
@@ -30,6 +30,7 @@
     "debug": "^4.4.0",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
+    "telemetry": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
