Update package versions (#946)
- `tar-fs` and `http-proxy-middleware` in the lockfile
- Update `build-tools` version to 0.56
- `pnpm` for corepack.

--- a/ts/package.json
+++ b/ts/package.json
@@ -42,13 +42,13 @@
     "test:local": "pnpm -r --no-sort --stream --workspace-concurrency=1 run test:local"
   },
   "devDependencies": {
-    "@fluidframework/build-tools": "^0.54.0",
+    "@fluidframework/build-tools": "^0.56.0",
     "@types/node": "^20.17.28",
     "markdown-link-check": "^3.13.7",
     "prettier": "^3.5.3",
     "shx": "^0.4.0"
   },
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
   "engines": {
     "node": ">=18",
     "pnpm": ">=9"
