--- a/ts/examples/microdataExtract/package.json
+++ b/ts/examples/microdataExtract/package.json
@@ -44,10 +44,12 @@
     "@oclif/plugin-help": "^5",
     "fs-extra": "^11.3.0",
     "puppeteer": "^23.8.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/xml2js": "^0.4.14",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.4.2"
