more indexing work

--- a/ts/packages/memory/image/package.json
+++ b/ts/packages/memory/image/package.json
@@ -28,6 +28,7 @@
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
+    "get-folder-size": "^5.0.0",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
     "telemetry": "workspace:*",
