Introduction of IndexingManager + IndexingService (#957)
With this PR you can now run **_at_index_** commands to create/delete
image indexes that are used by the montage agent and others that use
this data (image agent, conversation manager, etc.).

NOTE: currently the montage agent only uses the first created index,
this will be updated in a future PR

sample usage:  **_at_index create image img_index c:\_**

NOTE: is is NOT recommended to index an entire disk since you'll pickup
application resource images which will tarnish the user experience.
Please index your camera roll or similar image archive folders only!

--- a/ts/packages/memory/image/package.json
+++ b/ts/packages/memory/image/package.json
@@ -28,8 +28,10 @@
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
+    "get-folder-size": "^5.0.0",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
+    "telemetry": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
