--- a/ts/examples/docuProc/package.json
+++ b/ts/examples/docuProc/package.json
@@ -36,12 +36,14 @@
     "knowpro": "workspace:*",
     "memory-providers": "workspace:*",
     "pdfjs-dist": "^4.10.38",
+    "proper-lockfile": "^4.1.2",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
+    "@types/proper-lockfile": "^4.1.4",
     "copyfiles": "^2.4.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1"
