--- a/ts/examples/docuProc/package.json
+++ b/ts/examples/docuProc/package.json
@@ -28,6 +28,7 @@
     "aiclient": "workspace:*",
     "canvas": "^3.1.0",
     "chalk": "^5.4.1",
+    "cheerio": "1.0.0-rc.12",
     "debug": "^4.4.0",
     "dotenv": "^16.3.1",
     "fast-xml-parser": "4.5.1",
