--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -25,7 +25,7 @@
     "build:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js",
     "build:win": "npm run deploy && electron-builder --win --config electron-builder.config.js",
     "clean": "rimraf --glob out dist deploy *.tsbuildinfo *.done.build.log",
-    "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --shamefully-hoist --config.node-linker=hoisted --legacy",
+    "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
     "dev": "npm run build:electron && electron-vite dev",
     "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^3.26.1",
-    "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0",
+    "@electron-toolkit/preload": "^3.0.2",
+    "@electron-toolkit/utils": "^4.0.0",
     "@fontsource/lato": "^5.2.5",
     "@typeagent/agent-sdk": "workspace:*",
     "agent-dispatcher": "workspace:*",
@@ -53,7 +53,7 @@
     "default-agent-provider": "workspace:*",
     "dompurify": "^3.2.4",
     "dotenv": "^16.3.1",
-    "electron-updater": "^6.3.2",
+    "electron-updater": "^6.6.2",
     "jose": "^5.9.6",
     "markdown-it": "^14.1.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
@@ -67,7 +67,7 @@
     "@types/dompurify": "^3.0.5",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "electron": "^30.0.1",
+    "electron": "^35.2.1",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
     "less": "^4.2.0",
