Update minimum supported node versions to 20

--- a/.github/workflows/build-docker-container.yml
+++ b/.github/workflows/build-docker-container.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v4
         if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ts != 'false' }}
         with:
-          node-version: ${{ matrix.version }}
+          node-version: 22
           #cache: "pnpm"
           #cache-dependency-path: ts/pnpm-lock.yaml
 
