--- a/.github/workflows/build-ts.yml
+++ b/.github/workflows/build-ts.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        version: [18, 20, 22]
+        version: [20, 22]
 
     runs-on: ${{ matrix.os }}
     steps:
