--- a/ts/packages/agents/montage/package.json
+++ b/ts/packages/agents/montage/package.json
@@ -41,6 +41,7 @@
     "knowpro": "workspace:*",
     "koffi": "^2.10.1",
     "sharp": "^0.33.5",
+    "typeagent": "workspace:*",
     "typechat": "^0.1.1",
     "winreg": "^1.2.5"
   },
@@ -49,7 +50,6 @@
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.7",
-    "@types/node": "^18.18.7",
     "@types/winreg": "^1.2.36",
     "copy-webpack-plugin": "^12.0.1",
     "jest": "^29.7.0",
