--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -17,22 +17,22 @@
     "package.json"
   ],
   "scripts": {
-    "build": "concurrently npm:typecheck npm:build:electron",
-    "build:electron": "concurrently npm:build:electron:esm npm:build:electron:cjs",
+    "build": "concurrently npm:prepare-vite npm:build:electron:esm",
     "build:electron:cjs": "electron-vite build src/preload --config electron.vite.preload-cjs.config.mts --logLevel error",
-    "build:electron:esm": "electron-vite build . --config electron.vite.config.mts",
+    "build:electron:esm": "electron-vite build",
     "build:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js",
     "build:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js",
     "build:win": "npm run deploy && electron-builder --win --config electron-builder.config.js",
     "clean": "rimraf --glob out dist deploy *.tsbuildinfo *.done.build.log",
     "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
-    "dev": "npm run build:electron && electron-vite dev",
+    "dev": "npm run prepare-vite && electron-vite dev",
     "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
+    "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
     "shell:smoke": "npx playwright test simple.spec.ts",
     "shell:test": "npx playwright test",
-    "start": "npm run build:electron && electron-vite preview",
+    "start": "npm run prepare-vite && electron-vite preview",
     "start:win": ".\\dist\\win-unpacked\\typeagent-shell.exe",
     "typecheck": "concurrently npm:typecheck:node npm:typecheck:web",
     "typecheck:node": "tsc -p tsconfig.node.json",
