mac setup fixes

--- a/ts/package.json
+++ b/ts/package.json
@@ -36,7 +36,11 @@
     "regen": "pnpm -C packages/cli run regen",
     "regen:builtin": "pnpm -C packages/cli run regen:builtin",
     "shell": "pnpm -C packages/shell run dev",
-    "shell:build:win": "pnpm -C packages/shell run build:win",
+    "shell:package:linux": "pnpm -C packages/shell run package:linux",
+    "shell:package:mac": "pnpm -C packages/shell run package:mac",
+    "shell:package:win": "pnpm -C packages/shell run package:win",
+    "shell:start:linux": "pnpm -C packages/shell run start:linux",
+    "shell:start:mac": "pnpm -C packages/shell run start:mac",
     "shell:start:win": "pnpm -C packages/shell run start:win",
     "shell:test": "npx --prefix packages/shell playwright test simple.spec.ts",
     "test": "pnpm run test:local && pnpm run test:live",
