--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -20,12 +20,12 @@
     "build": "concurrently npm:prepare-vite npm:build:electron:esm",
     "build:electron:cjs": "electron-vite build src/preload --config electron.vite.preload-cjs.config.mts --logLevel error",
     "build:electron:esm": "electron-vite build",
-    "build:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js",
-    "build:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js",
-    "build:win": "npm run deploy && electron-builder --win --config electron-builder.config.js",
     "clean": "rimraf --glob out dist deploy *.tsbuildinfo *.done.build.log",
     "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
     "dev": "npm run prepare-vite && electron-vite dev",
+    "package:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js",
+    "package:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js",
+    "package:win": "npm run deploy && electron-builder --win --config electron-builder.config.js",
     "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
@@ -33,6 +33,8 @@
     "shell:smoke": "npx playwright test simple.spec.ts",
     "shell:test": "npx playwright test",
     "start": "npm run prepare-vite && electron-vite preview",
+    "start:linux": "./dist/linux-unpacked/typeagent-shell",
+    "start:mac": "open ./dist/mac-arm64/TypeAgent\\ Shell.app",
     "start:win": ".\\dist\\win-unpacked\\typeagent-shell.exe",
     "typecheck": "concurrently npm:typecheck:node npm:typecheck:web",
     "typecheck:node": "tsc -p tsconfig.node.json",
