--- a/.github/workflows/build-package-shell.yml
+++ b/.github/workflows/build-package-shell.yml
@@ -78,4 +78,4 @@ jobs:
         if: ${{ github.event_name != 'pull_request' && github.event_name != 'merge_group' }}
         with:
           name: typeagent-shell-package-${{ github.run_id }}
-          path: ts/package/shell/dist
+          path: ts/packages/shell/dist
