Started translating query.py; start using pytest (#983)
- Incomplete translation of `query.py` and its dependency
`collections.py`
  (I was interrupted and decided to make this a checkpoint).
- Start using pytest (a number of config changes),
- Translate the old `demo.py` and `typeagent/podcasts/__main__.py` into
proper pytest tests,

The tests live in the `test` folder and are invoked by `make test`.

--- a/python/ta/Makefile
+++ b/python/ta/Makefile
@@ -8,7 +8,7 @@ all: venv format check test build
 
 .PHONY: format
 format: venv
-	venv/bin/black typeagent *.py
+	venv/bin/black typeagent tests
 
 .PHONY: check
 check: venv
@@ -16,11 +16,7 @@ check: venv
 
 .PHONY: test
 test: venv
-	venv/bin/python -m typeagent.podcasts testdata/npr.txt
-
-.PHONY: demo
-demo: venv
-	venv/bin/python -m demo testdata/Episode_53_AdrianTchaikovsky_index
+	venv/bin/python -m pytest
 
 .PHONY: build
 build: venv
@@ -31,8 +27,9 @@ venv:
 	python3 -m venv venv || (rm -rf venv && exit 1)
 	venv/bin/pip -q install -r requirements.txt
 	@venv/bin/python --version
+	@venv/bin/black --version | head -1
 	@venv/bin/pyright --version
-	@venv/bin/black --version
+	@venv/bin/python -m pytest --version
 
 .PHONY: clean
 clean:
@@ -47,8 +44,7 @@ help:
 	@echo "make all    # venv, format, check, test, build"
 	@echo "make format # Run black"
 	@echo "make check  # Run pyright"
-	@echo "make test   # Run import_podcast test"
-	@echo "make test   # Run the demo of the week"
+	@echo "make test   # Run pytest (tests are in tests/)"
 	@echo "make build  # Build the wheel (under dist/)"
 	@echo "make venv   # Create venv/"
 	@echo "make clean  # Remove build/, dist/, venv/, *.egg-info/"
