fix azure pipeline

--- a/pipelines/azure-build-package-shell.yml
+++ b/pipelines/azure-build-package-shell.yml
@@ -87,7 +87,6 @@ jobs:
         displayName: "Package - shell"
         workingDirectory: $(workingDirectory)
 
-      - publish: dist
+      - publish: $(shell_folder)/dist
         displayName: "Publish"
         artifact: "shell"
-        workingDirectory: $(shell_folder)
