--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -23,8 +23,10 @@
     "clean": "rimraf --glob out dist deploy *.tsbuildinfo *.done.build.log",
     "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
     "dev": "npm run prepare-vite && electron-vite dev",
-    "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
+    "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps $INSTALL_ARCH_FLAG",
     "package:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js -p never",
+    "package:mac:x64": "cross-env \"INSTALL_ARCH_FLAG=--arch x64\" pnpm run deploy && electron-builder --mac --config electron-builder.config.js -p never --x64",
+    "package:mac:arm64": "cross-env \"INSTALL_ARCH_FLAG=--arch arm64\" pnpm run deploy && electron-builder --mac --config electron-builder.config.js -p never --arm64",
     "package:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js -p never",
     "package:win": "npm run deploy && electron-builder --win --config electron-builder.config.js -p never",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
