--- a/pipelines/include-install-pnpm.yml
+++ b/pipelines/include-install-pnpm.yml
@@ -46,7 +46,7 @@ steps:
       script: |
         echo "Using node $(node --version)"
         npm install -g corepack@0.31.0
-        if [[ '$(AgentOS)' == 'Windows_NT' ]]; then
+        if [[ '$(Agent.OS)' == 'Windows_NT' ]]; then
           corepack enable
         else
           sudo corepack enable
