--- a/pipelines/include-install-pnpm.yml
+++ b/pipelines/include-install-pnpm.yml
@@ -15,12 +15,16 @@ parameters:
     type: boolean
     default: true
 
-  # The path to the pnpm store. The contents here will be cached and restored when using pnpm in a pipeline.
-  - name: pnpmStorePath
-    type: string
-    default: $(Pipeline.Workspace)/.pnpm-store
-
 steps:
+  # The path to the pnpm store. The contents here will be cached and restored when using pnpm in a pipeline.
+  - bash:
+    displayName: Set pnpm store path variable
+    script: |
+      if [[ '$(Agent.OS)' == 'Windows_NT' ]]; then
+        echo "##vso[task.setvariable variable=pnpmStorePathWindows;isOutput=true]$(Pipeline.Workspace)\.pnpm-store"
+      else
+        echo "##vso[task.setvariable variable=pnpmStorePath;isOutput=true]$(Pipeline.Workspace)/.pnpm-store"
+      fi
   - ${{ if eq(parameters.enableCache, true) }}:
       - task: Cache@2
         displayName: Cache pnpm store
@@ -30,7 +34,7 @@ steps:
           # Caches are already scoped to individual pipelines, so no need to include the release group name or tag
           # in the cache key
           key: 'pnpm-store | "$(Agent.OS)" | ${{ parameters.buildDirectory }}/pnpm-lock.yaml'
-          path: ${{ parameters.pnpmStorePath }}
+          path: $(pnpmStorePath)
           restoreKeys: |
             pnpm-store | "$(Agent.OS)"
 
@@ -52,5 +56,5 @@ steps:
           sudo corepack enable
         fi
         echo "Using pnpm $(pnpm -v)"
-        pnpm config set store-dir ${{ parameters.pnpmStorePath }}
+        pnpm config set store-dir $(pnpmStorePath)
         pnpm config set -g workspace-concurrency 0
