Fiz window version script

--- a/pipelines/include-install-pnpm.yml
+++ b/pipelines/include-install-pnpm.yml
@@ -55,5 +55,6 @@ steps:
           sudo corepack enable
         fi
         echo "Using pnpm $(pnpm -v)"
+        echo "Using pnpm store path $pnpmStorePath"
         pnpm config set store-dir $pnpmStorePath
         pnpm config set -g workspace-concurrency 0
