--- a/pipelines/azure-build-ts.yml
+++ b/pipelines/azure-build-ts.yml
@@ -50,7 +50,7 @@ jobs:
         displayName: "Install dependencies"
         workingDirectory: $(workingDirectory)
 
-      - script: |
+      - bash: |
           current_version=$(node -p "require('./package.json').version")
           new_version="${current_version}-$(Build.BuildId)"
           echo "##vso[task.setvariable variable=package_version]$new_version"
