--- a/pipelines/azure-build-ts.yml
+++ b/pipelines/azure-build-ts.yml
@@ -50,16 +50,9 @@ jobs:
         displayName: "Install dependencies"
         workingDirectory: $(workingDirectory)
 
-      - bash: |
-          current_version=$(node -p "require('./package.json').version")
-          new_version="${current_version}-$(Build.BuildId)"
-          echo "##vso[task.setvariable variable=package_version]$new_version"
-          jq ".version=\"$new_version\"" package.json > package.tmp.json
-          mv package.tmp.json package.json
-          echo "Updated package.json to version $new_version"
-          cat package.json
-        displayName: "Update Package Version"
-        workingDirectory: $(agentsdk_folder)
+      - template: include-update-package-version.yml
+        parameters:
+          packageFolder: $(agentsdk_folder)
 
       - script: |
           npm run build
