--- a/pipelines/include-install-pnpm.yml
+++ b/pipelines/include-install-pnpm.yml
@@ -24,6 +24,7 @@ steps:
         echo "##vso[task.setvariable variable=pnpmStorePath;isOutput=true]$(Pipeline.Workspace)/.pnpm-store"
       fi
     displayName: Set pnpm store path variable
+    name: SetPnpmStorePath
   - ${{ if eq(parameters.enableCache, true) }}:
       - task: Cache@2
         displayName: Cache pnpm store
@@ -33,7 +34,7 @@ steps:
           # Caches are already scoped to individual pipelines, so no need to include the release group name or tag
           # in the cache key
           key: 'pnpm-store | "$(Agent.OS)" | ${{ parameters.buildDirectory }}/pnpm-lock.yaml'
-          path: $(pnpmStorePath)
+          path: $(SetPnpmStorePath.pnpmStorePath)
           restoreKeys: |
             pnpm-store | "$(Agent.OS)"
 
@@ -55,6 +56,6 @@ steps:
           sudo corepack enable
         fi
         echo "Using pnpm $(pnpm -v)"
-        echo "Using pnpm store path $PNPMSTOREPATH"
-        pnpm config set store-dir $PNPMSTOREPATH
+        echo "Using pnpm store path $(SetPnpmStorePath.pnpmStorePath)"
+        pnpm config set store-dir $(SetPnpmStorePath.pnpmStorePath)
         pnpm config set -g workspace-concurrency 0
