--- a/pipelines/include-install-pnpm.yml
+++ b/pipelines/include-install-pnpm.yml
@@ -21,15 +21,6 @@ parameters:
     default: $(Pipeline.Workspace)/.pnpm-store
 
 steps:
-  # The path to the pnpm store. The contents here will be cached and restored when using pnpm in a pipeline.
-  - bash: |
-      if [[ '$(Agent.OS)' == 'Windows_NT' ]]; then
-        echo "##vso[task.setvariable variable=pnpmStorePath;isOutput=true]${{ replace(parameters.pnpmStorePath, '\', '/') }}"
-      else
-        echo "##vso[task.setvariable variable=pnpmStorePath;isOutput=true]${{ parameters.pnpmStorePath }}"
-      fi
-    displayName: Set pnpm store path variable
-    name: SetPnpmStorePath
   - ${{ if eq(parameters.enableCache, true) }}:
       - task: Cache@2
         displayName: Cache pnpm store
@@ -39,29 +30,30 @@ steps:
           # Caches are already scoped to individual pipelines, so no need to include the release group name or tag
           # in the cache key
           key: 'pnpm-store | "$(Agent.OS)" | ${{ parameters.buildDirectory }}/pnpm-lock.yaml'
-          path: $(SetPnpmStorePath.pnpmStorePath)
+          path: ${{ parameters.pnpmStorePath }}
           restoreKeys: |
             pnpm-store | "$(Agent.OS)"
 
-  - task: Bash@3
-    displayName: Install and configure pnpm
-    inputs:
-      targetType: "inline"
-      workingDirectory: ${{ parameters.buildDirectory }}
-      # The previous task (cache restoration) can timeout, which is classified as canceled, but since it's just cache
-      # restoration, we want to continue even if it timed out.
-      condition: or(succeeded(), canceled())
-      # workspace-concurrency 0 means use use the CPU core count. This is better than the default (4) for larger agents.
-      script: |
-        echo "Using node $(node --version)"
+  # workspace-concurrency 0 means use use the CPU core count. This is better than the default (4) for larger agents.
+  - bash: |
+      echo "Using node $(node --version)"
+      storePath=${{ parameters.pnpmStorePath }}
+      if [[ '$(Agent.OS)' == 'Windows_NT' ]]; then
+        npm install -g corepack@0.31.0 --force
+        corepack enable
+        storePath=$PNPM_STORE_PATH
+      else
         npm install -g corepack@0.31.0
-        if [[ '$(Agent.OS)' == 'Windows_NT' ]]; then
-          corepack enable
-        else
-          sudo corepack enable
-        fi
-        echo "Using pnpm $(pnpm -v)"
-        echo "Using pnpm store path $(SetPnpmStorePath.pnpmStorePath)"
-        pnpm config set store-dir $(SetPnpmStorePath.pnpmStorePath)
-        pnpm config set -g workspace-concurrency 0
-        pnpm config list
+        sudo corepack enable
+      fi
+      pnpm config set store-dir $storePath
+      pnpm config set -g workspace-concurrency 0
+      echo "Using pnpm $(pnpm -v)"
+      echo "Using pnpm store path $(pnpm store path)"
+    displayName: Install and configure pnpm
+    workingDirectory: ${{ parameters.buildDirectory }}
+    # The previous task (cache restoration) can timeout, which is classified as canceled, but since it's just cache
+    # restoration, we want to continue even if it timed out.
+    condition: or(succeeded(), canceled())
+    env:
+      PNPM_STORE_PATH: ${{ replace(parameters.pnpmStorePath, '\', '/') }}
