Add test_vectorbase; fix a few VectorBase bugs it found

--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -25,3 +25,6 @@ packages = [
     "typeagent.knowpro",
     "typeagent.podcasts",
 ]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
