--- a/python/ta/requirements.txt
+++ b/python/ta/requirements.txt
@@ -5,7 +5,8 @@ numpy
 openai
 pydantic
 pytest
-pytest_asyncio
+pytest-asyncio
+pytest-mock
 python-dotenv
 typechat @ git+https://github.com/microsoft/TypeChat#subdirectory=python
 
